content/terraform-plugin-framework/v1.0.x/docs/plugin/framework/migrating/attributes-blocks/fields.mdx
---
page_title: 'Attribute Fields: Migrating from SDKv2 to the Framework'
description: >-
  Migrate attribute required, optional, computed, and sensitive fields from SDKv2 to the plugin Framework
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-03-06T10:49:53-05:00
last_modified: 2025-03-14T14:39:20-05:00
# END AUTO GENERATED METADATA
---

# Attribute Fields

A subset of attribute fields, such as required, optional, computed, or sensitive, define attribute behavior as boolean flags. Refer to
[Schemas - Attributes](/terraform/plugin/framework/handling-data/schemas#required) in the Framework documentation for details.

This page explains how to migrate the required, optional, computed, and sensitive attribute fields from SDKv2 to the
Framework.

## SDKv2

In SDKv2, `Required`, `Optional`, `Computed`, and `Sensitive` are boolean fields on the attribute's schema.

```go
func resourceExample() *schema.Resource {
    return &schema.Resource{
         /* ... */
        Schema: map[string]*schema.Schema{
            "attribute_example": {
                Required:    bool
                Optional:    bool
                Computed:    bool
                Sensitive:   bool
                /* ... */
```

## Framework

In the Framework, you set the same fields on the `schema.Attribute` implementation, with the same behavior.

```go
func (r *ThingResource) Schema(ctx context.Context, req resource.SchemaRequest, resp *resource.SchemaResponse) {
    resp.Schema = schema.Schema{
        /* ... */
        Attributes: map[string]schema.Attribute{
            "attribute_example": schema.XXXAttribute{
                Required:   bool
                Optional:   bool
                Computed:   bool
                Sensitive:  bool
                /* ... */
```

## Example

### SDKv2

The following example shows how the `example_attribute` attribute on the `exampleDataSource` data source is set to
be required with SDKv2.

```go
func exampleDataSource() *schema.Resource {
    return &schema.Resource{
        Schema: map[string]*schema.Schema{
            "example_attribute": {
                Required:   true,
                /* ... */
            },
            /* ... */
```

### Framework

The following example shows how the `example_attribute` attribute on the `exampleDataSource` data source is set
to be required with the Framework.

```go
func (d *exampleDataSource) Schema(ctx context.Context, req datasource.SchemaRequest, resp *datasource.SchemaResponse) {
    resp.Schema = schema.Schema{
        Attributes: map[string]schema.Attribute{
            "example_attribute": schema.StringAttribute{
                Required:   true,
                /* ... */
            },
            /* ... */
```
